--- a/package.json
+++ b/package.json
@@ -11,15 +11,22 @@
   },
   "dependencies": {
     "@reduxjs/toolkit": "^2.2.1",
+    "@stripe/react-stripe-js": "^2.5.0",
+    "@stripe/stripe-js": "^3.0.3",
+    "@tanstack/react-query": "^5.21.7",
+    "apisauce": "^3.0.1",
     "axios": "^1.6.7",
     "clsx": "^2.1.0",
+    "cors": "^2.8.5",
     "formik": "^2.4.5",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^5.0.1",
     "react-redux": "^9.1.0",
     "react-router-dom": "6",
+    "react-toastify": "^10.0.4",
     "redux-persist": "^6.0.0",
+    "stripe": "^14.17.0",
     "swiper": "^11.0.6",
     "yup": "^1.3.3"
   },
